<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@drawable/bg2"
    android:padding="10dp"
    tools:context=".RagActivity">



    <ImageView
        android:id="@+id/Avatar"
        android:layout_width="143dp"
        android:layout_height="104dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/todo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />



    <TextView
        android:id="@+id/phoneLbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/verify_your_phone_number"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/Avatar"
        app:layout_constraintStart_toStartOf="@+id/Avatar"
        app:layout_constraintTop_toBottomOf="@+id/Avatar" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textColor="#FFFFFF"
        android:gravity="center"
        android:text="@string/chaton_app_will_send_an_otp_to_verify_your_phone_number"
        app:layout_constraintEnd_toEndOf="@+id/phoneLbl"
        app:layout_constraintStart_toStartOf="@+id/phoneLbl"
        app:layout_constraintTop_toBottomOf="@+id/phoneLbl" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:cardBackgroundColor="#008EFF"
        app:cardCornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:orientation="vertical">






            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:weightSum="3"
                android:orientation="horizontal"
                tools:ignore="MissingConstraints">

                <com.hbb20.CountryCodePicker
                    android:id="@+id/cpp"
                    android:layout_width="30dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    app:ccp_autoDetectCountry="true"
                    app:ccp_showNameCode="true"
                    app:ccp_textSize="16sp"
                    app:ccp_contentColor="#ffffff"
                    />

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:maxLength="10"
                    android:hint="@string/enter_mobile_number"
                    android:inputType="phone"
                    android:textSize="16sp"
                    android:id="@+id/phoneBox"
                    android:ems="10"
                    android:textColorHint="#ffffff"
                    android:gravity="center"
                    android:padding="10dp"
                    android:phoneNumber="true"
                    android:textColor="#ffffff"

                    />



            </LinearLayout>

            <Button
                android:id="@+id/continueButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:backgroundTint="#00BCD4"
                android:text="@string/continue_B" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>