<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:layout_marginTop="5dp"
    android:background="@drawable/bg2"
    android:padding="10dp"
    app:barrierAllowsGoneWidgets="true"
    tools:context=".RagActivity">

    <ImageView
        android:id="@+id/Avatar"
        android:layout_width="143dp"
        android:layout_height="104dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/todo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/phoneLbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/verify_your_phone_number"
        android:textColor="#ffffff"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/Avatar"
        app:layout_constraintStart_toStartOf="@+id/Avatar"
        app:layout_constraintTop_toBottomOf="@+id/Avatar" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/enter_the_6_digit_verification_code_that_you_received_and_click_verify"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="@+id/phoneLbl"
        app:layout_constraintStart_toStartOf="@+id/phoneLbl"
        app:layout_constraintTop_toBottomOf="@+id/phoneLbl" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:cardBackgroundColor="#008EFF"
        app:cardCornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:weightSum="1"
            android:orientation="vertical"
            android:layout_gravity="center">


            <!--<EditText
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:maxLength="6"
                android:hint="Enter Otp"
                android:inputType="phone"
                android:textSize="20sp"
                android:id="@+id/otpView"
                android:ems="6"
                android:textColorHint="#ffffff"
                android:gravity="center"
                android:padding="10dp"
                android:phoneNumber="true"
                android:textColor="#ffffff"

                /> -->

            <!-- <com.mukesh.OtpView
                android:id="@+id/otp_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:focusableInTouchMode="true"
                android:inputType="number"
                android:itemBackground="@color/blue"
                android:textColor="#ffffff"
                app:OtpItemCount="6"
                app:OtpLineColor="@color/blue"
                app:OtpViewType="line" /> -->

            <com.mukesh.OtpView
                android:id="@+id/otp_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:focusableInTouchMode="true"
                android:inputType="number"
                android:itemBackground="#008EFF"
                android:textColor="#ffffff"
                app:OtpItemCount="6"
                app:OtpLineColor="@color/blue"
                app:OtpViewType="line" />


            <!--<Button
                android:id="@+id/continueButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:backgroundTint="#00BCD4"
                android:text="Verify" />-->
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>